# LECI

./: .gitignore  README.md
1_Ano/: .gitignore
1_Ano/Laboratórios de Informática/: .gitignore
1_Ano/POO/: .gitignore
2_Ano/: .gitignore
2_Ano/AC1/: exceptions.s
2_Ano/AC2/: .gitignore
2_Ano/AS/: .gitignore
2_Ano/RC1/: .gitignore  README.md
3_Ano/C/: .gitignore
3_Ano/IA/: .gitignore
3_Ano/MPEI/: .gitignore
3_Ano/PDS/: .gitignore
3_Ano/SO/somm22/src/: CMakeLists.txt  main.cpp  main2.cpp
3_Ano/SO/somm22/src/core/log/: CMakeLists.txt  log.cpp  log_close.cpp  log_event.cpp  log_open.cpp
3_Ano/SO/somm22/src/core/sup/: exception.cpp
3_Ano/SO/somm22/src/group/mem/: CMakeLists.txt  mem.cpp  mem_bf_alloc.cpp  mem_free.cpp  mem_getters.cpp  mem_module.h  mem_nf_alloc.cpp  mem_policy_as_string.cpp  mem_wf_alloc.cpp
3_Ano/SO/somm22/src/group/pct/: pct_getters.cpp  pct_init.cpp  pct_print.cpp  pct_state_as_string.cpp
3_Ano/SO/somm22/src/group/peq/: peq_first_postponed.cpp  peq_insert.cpp  peq_is_empty.cpp  peq_module.h  peq_print.cpp  peq_type_as_string.cpp
3_Ano/SO/somm22/src/group/sim/: sim_run.cpp
3_Ano/SO/somm22/src/selector/: CMakeLists.txt  mem.cpp  pct.cpp  sim.cpp
BD/: .gitignore  CREATION_TABLES.txt
BD/APF-E_65081_103440/: ModeloRelacional.drawio
BD/guiao02/: aula2_submit.md  ex_2_1.drawio  ex_2_2.drawio  ex_2_3.drawio
BD/guiao03/: aula3_submit.md  ex_3_1c.drawio
C/: .gitignore
IA/: .gitignore
IA/TPI2/: README.md
IHC/: .gitignore
MPEI/: MPEIDO.docx
PDS/: .gitignore
PECI/: .gitignore
SIO/: .gitignore
SO/: .gitignore
(+2200 files in other folders)
